# bc-mcp

./: .gitignore  README.md  README_EN.md
.github/: copilot-instructions.md
.github/instructions/: bootcamp-markdown.instructions.md  docker-mcp.instructions.md  python-mcp.instructions.md  typescript-mcp.instructions.md
.github/prompts/: commit-message.prompt.md  create-mcp-server.prompt.md  create-mcp-tool.prompt.md  create-practice.prompt.md  create-theory.prompt.md  create-week.prompt.md
bootcamp/week-01-introduccion_mcp/: README.md  rubrica-evaluacion.md
bootcamp/week-02-json_rpc_y_transports/: README.md  rubrica-evaluacion.md
bootcamp/week-03-primitivos_tools_resources_prompts/: README.md  rubrica-evaluacion.md
bootcamp/week-04-primer_server_python/: README.md  rubrica-evaluacion.md
bootcamp/week-04-primer_server_python/2-practicas/practica-03/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bootcamp/week-04-primer_server_python/2-practicas/practica-03/src/: server.py
bootcamp/week-05-primer_server_typescript/: README.md  rubrica-evaluacion.md
bootcamp/week-06-servers_avanzados_primitivos/: README.md  rubrica-evaluacion.md
bootcamp/week-07-servers_bd_apis_externas/: README.md  rubrica-evaluacion.md
bootcamp/week-11-testing_seguridad_docker/3-proyecto/starter/: .dockerignore  .env.example  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
bootcamp/week-11-testing_seguridad_docker/3-proyecto/starter/src/: server.py  validators.py
bootcamp/week-11-testing_seguridad_docker/3-proyecto/starter/tests/: conftest.py  test_tools.py
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-01-ci-python/starter/: pyproject.toml
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-01-ci-python/starter/.github/workflows/: ci-python.yml
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-01-ci-python/starter/src/: server.py
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-01-ci-python/starter/tests/: conftest.py  test_tools.py
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-03-docker-ghcr/starter/: .dockerignore  Dockerfile.python  pyproject.toml
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-03-docker-ghcr/starter/.github/workflows/: docker-build-push.yml
bootcamp/week-12-cicd_proyecto_final/2-practicas/practica-03-docker-ghcr/starter/src/: server.py
bootcamp/week-12-cicd_proyecto_final/3-proyecto/starter/: .dockerignore  .env.example  Dockerfile.client  Dockerfile.python  README.md  client.py  docker-compose.yml  pyproject.toml
bootcamp/week-12-cicd_proyecto_final/3-proyecto/starter/.github/workflows/: ci.yml
bootcamp/week-12-cicd_proyecto_final/3-proyecto/starter/src/: config.py  server.py  validators.py
bootcamp/week-12-cicd_proyecto_final/3-proyecto/starter/tests/: conftest.py  test_tools.py
docs/: PLAN_TRABAJO.md
docs/setup/: README.md  (+2 more)
scripts/: scaffold_bootcamp.py
(+424 files in other folders)
