[project]
name = "practice-03-uv-dependencies"
version = "1.0.0"
description = "Week 04 — Practice 03: pyproject.toml and uv dependency management"
requires-python = ">=3.13"
dependencies = [
    "mcp==1.9.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
