[project]
name = "mcp-library-server-final"
version = "0.1.0"
requires-python = ">=3.13"
description = "Proyecto final del Bootcamp MCP Zero to Hero — Sistema MCP completo"
dependencies = [
    "mcp==1.9.0",
    "pydantic==2.11.4",
    "httpx==0.28.1",
    "uvicorn==0.34.0",
    "starlette==0.46.1",
    "anthropic==0.50.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.0",
    "ruff==0.11.2",
    "mypy==1.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
